<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEditFragment" >

    <EditText
        android:id="@+id/addedit_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/addedit_title"
        android:inputType="textNoSuggestions"
        android:maxLength="64"
        android:maxLines="5"
        android:minLines="1"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addedit_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/addedit_desc"
        android:inputType="textMultiLine"
        android:maxLength="256"
        android:maxLines="5"
        android:minLines="1"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/addedit_name"
        app:layout_constraintStart_toStartOf="@+id/addedit_name"
        app:layout_constraintTop_toBottomOf="@+id/addedit_name" />

    <EditText
        android:id="@+id/addedit_order"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/addedit_order"
        android:inputType="numberSigned"
        android:maxLength="9"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/addedit_desc"
        app:layout_constraintStart_toStartOf="@+id/addedit_desc"
        app:layout_constraintTop_toBottomOf="@+id/addedit_desc" />

    <Button
        android:id="@+id/addedit_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:enabled="true"
        android:text="@string/addedit_save_title"
        app:layout_constraintEnd_toEndOf="@+id/addedit_order"
        app:layout_constraintStart_toStartOf="@+id/addedit_order"
        app:layout_constraintTop_toBottomOf="@+id/addedit_order" />
</androidx.constraintlayout.widget.ConstraintLayout>